<resources>
    <string name="app_name">Android App</string>
    <string name="SignUp">Sign up</string>
    <string name="Login">Login</string>
    <string name="Email">Enter Email</string>
    <string name="PassWord">Enter Password</string>
    <string name="PassWord2">Retype Password</string>
    <string name="FName">First Name</string>
    <string name="SName">Surname</string>
    <string name="title_activity_passenger_map">Map</string>

</resources>
